src/test/snapshots/ruby_fast_lsp__test__integration_test__toplevel_in_conditional.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 3,
        "line": 2
      },
      "start": {
        "character": 0,
        "line": 1
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/builtin_constant.rb"
  }
]
