src/test/snapshots/ruby_fast_lsp__test__integration_test__value_const_def_top.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 12,
        "line": 1
      },
      "start": {
        "character": 2,
        "line": 1
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/const_single.rb"
  }
]
