src/test/snapshots/ruby_fast_lsp__test__integration_test__value_const_ref.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 11,
        "line": 5
      },
      "start": {
        "character": 6,
        "line": 5
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/const_single.rb"
  },
  {
    "range": {
      "end": {
        "character": 17,
        "line": 13
      },
      "start": {
        "character": 5,
        "line": 13
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/const_single.rb"
  }
]
